# AISE

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SKILLS_SPEC.md  System-Requirements.md  WORKFLOW.md  create_issues.py  global_project_config.json  pyproject.toml  system-design.md  todo.md
.github/workflows/: ci.yml
config/: global_project_config.example.json
docs/: SYSTEM_DESIGN_REQUIREMENTS_GUIDE.md  agent_runtime_design.md  design.md
packaging/: build.sh  installer_runtime.sh
scripts/: run_test_calculator.py  run_test_pipeline.py  test_llm_stability.py  test_llm_stability_debug.py  test_llm_stress.py  test_llm_with_policy_backend.py  test_llm_write_read_edit.py  test_per_module_dispatch.py  test_waterfall_v2_e2e.py  validate_skills_registry.py
src/aise/: __init__.py  config.py  logging_utils.py  main.py
src/aise/agents/: __init__.py  architect.md  architect.py  architect_agent.md  architecture_reviewer_agent.md  code_reviewer.md  coder_agent.md  commiter_agent.md  developer.md  developer.py  developer_agent.md  markdown_agent.py  product_designer_agent.md  product_manager.md  product_manager.py  product_manager_agent.md  product_reviewer_agent.md  project_manager.md  project_manager.py  project_manager_agent.md  prompts.py  qa_engineer.md  qa_engineer.py  qa_engineer_agent.md  rd_director.md  rd_director.py  rd_director_agent.md  reviewer.py  reviewer_agent.md  subsystem_architect_agent.md  subsystem_reviewer_agent.md  team_lead.py  team_lead_agent.md
src/aise/core/: __init__.py  agent.py  agent_capability_learning.py  ai_planner.py  artifact.py  dev_session.py  dynamic_engine.py  dynamic_load_balancer.py  llm.py  message.py  multi_project_session.py  multi_skill_allocator.py  orchestrator.py  plan_visualizer.py  process_md_adapter.py  (+14 more)
tests/: TEST_PERFORMANCE_ANALYSIS.md  conftest.py
tests/fixtures/v2_phase_io/cpp_wc_cli/delivery/input/: CMakeLists.txt
tests/fixtures/v2_phase_io/cpp_wc_cli/delivery/input/docs/: qa_report.json  requirement_contract.json
tests/fixtures/v2_phase_io/cpp_wc_cli/delivery/input/src/counter/: combined_counter.h  line_counter.cpp
tests/fixtures/v2_phase_io/cpp_wc_cli/delivery/input/src/input/: arg_parser.cpp  arg_parser.h
tests/fixtures/v2_phase_io/cpp_wc_cli/delivery/input/src/output/: formatter.cpp
tests/fixtures/v2_phase_io/cpp_wc_cli/delivery/input/tests/: test_byte_counter.cpp  test_e2e_no_trailing_newline.cpp  test_e2e_normal_file.cpp  test_word_counter.cpp
tests/fixtures/v2_phase_io/cpp_wc_cli/delivery/input/tests/scenarios/: e2e_empty_file.cpp  e2e_file_not_found.cpp  e2e_no_argument.cpp  e2e_no_trailing_newline.cpp  e2e_normal_file.cpp  test_arg_parser.cpp  test_byte_counter.cpp  test_line_counter.cpp  test_output_formatter.cpp  test_word_counter.cpp
tests/fixtures/v2_phase_io/python_cli_hello_world/implementation/input/: pyproject.toml
tests/fixtures/v2_phase_io/python_cli_hello_world/implementation/input/docs/: requirement.md
tests/test_agents/: test_architect.py  test_developer.py  test_no_language_lock_in.py  test_product_manager.py  test_project_manager.py  test_qa_engineer.py  test_rd_director.py  test_reviewer.py  test_team_lead.py
tests/test_core/: test_agent_capability_learning.py  test_ai_planner.py  test_ai_planner_llm.py  test_artifact.py  test_auto_discovery.py  test_dev_session.py  test_dynamic_engine.py  test_dynamic_load_balancer.py  test_message.py  test_model_config.py  test_multi_project_session.py  test_multi_skill_allocator.py  test_orchestrator.py  test_orchestrator_dynamic.py  test_plan_visualizer.py  test_planner_process_selection.py  test_process_registry.py  test_project_manager.py  test_project_manager_dynamic.py  test_reviewer_session.py  test_session.py  test_session_dynamic.py  test_status_updater.py  test_task_allocation.py  test_task_priority_scheduler.py  test_task_queue.py  test_tdd_session.py  test_workflow.py  test_workflow_dependencies.py  test_workspace.py
tests/test_e2e/: test_system_integration.py
tests/test_github/: test_client.py  test_config.py  test_permissions.py  test_skills.py
tests/test_langchain/: __init__.py  test_agent_node.py  test_deep_orchestrator.py  test_graph.py  test_state.py  test_supervisor.py  test_tool_adapter.py
tests/test_packaging/: __init__.py  test_build_and_install.py
tests/test_reliability/: test_circuit_breaker.py  test_reliability_wrapper.py  test_retry_policy.py  test_timeout_handler.py
tests/test_runtime/: conftest.py  test_action_contract.py  test_agent_acl.py  test_agent_card.py  test_agent_md_parser.py  test_agent_runtime.py  test_agents.py  test_concurrent_executor.py  test_consume_call_aware_wiring.py  test_data_dependency_contract.py  test_dispatch_retry_v2.py  test_dispatch_subsystems.py  test_entry_point_lifecycle.py  test_exceptions.py  test_executor.py  test_git_autocommit.py  test_halt_resume.py  test_init_module.py  test_integration_probe.py  test_interfaces.py  test_lang_config.py  test_lint_integration_test_imports.py  test_llm_factory.py  test_loop_detector_c8.py  test_main_entry_assembly_gate.py  test_manager.py  test_memory.py  test_models.py  test_observability.py  test_phase_executor.py  test_planner.py  test_policy_backend.py  test_predicates.py  test_process_md_parser.py  test_processes.py  test_project_manager.py  test_project_session.py  test_quantitative_coverage.py  test_recovery.py  test_registry.py  (+23 more)
tests/test_skills/: test_deep_product_json_parsing.py  test_deep_testing_workflow.py  test_registry_consistency.py  test_tdd_skill_content.py
tests/test_system/: test_aise_orchestration.py  test_snake_game_development.py
tests/test_testing/: test_phase_test.py
tests/test_utils/: test_markdown.py  test_markdown_docs_parsing.py
tests/test_web/: test_agent_interaction_view.py  test_app.py  test_incremental_mode.py  test_restart_project.py  test_safety_net_events_service.py  test_stage_labels.py
tests/test_whatsapp/: __init__.py  test_bridge.py  test_client.py  test_group.py  test_session.py  test_webhook.py
tmp_test_projects/system_test_project/: README.md  calculator.py  test_calculator.py
(+542 files in other folders)
